--- a/config/crd/bases/flinkoperator.k8s.io_flinkclusters.yaml
+++ b/config/crd/bases/flinkoperator.k8s.io_flinkclusters.yaml
@@ -27,6 +27,18 @@ spec:
         - jsonPath: .metadata.creationTimestamp
           name: age
           type: date
+        - jsonPath: .status.components.jobManager.readyReplicas
+          name: jm running
+          type: integer
+        - jsonPath: .status.components.jobManager.replicas
+          name: jm replicas
+          type: integer
+        - jsonPath: .status.components.taskManager.readyReplicas
+          name: tm running
+          type: integer
+        - jsonPath: .status.components.taskManager.replicas
+          name: tm replicas
+          type: integer
       name: v1beta1
       schema:
         openAPIV3Schema:
@@ -6582,6 +6594,23 @@ spec:
                       required:
                         - state
                       type: object
+                    jobManager:
+                      properties:
+                        name:
+                          type: string
+                        readyReplicas:
+                          format: int32
+                          type: integer
+                        replicas:
+                          format: int32
+                          type: integer
+                        state:
+                          type: string
+                      required:
+                        - name
+                        - replicas
+                        - state
+                      type: object
                     jobManagerIngress:
                       properties:
                         name:
@@ -6637,40 +6666,23 @@ spec:
                         - name
                         - state
                       type: object
-                    jobManagerStatefulSet:
+                    taskManager:
                       properties:
                         name:
                           type: string
+                        readyReplicas:
+                          format: int32
+                          type: integer
+                        replicas:
+                          format: int32
+                          type: integer
                         state:
                           type: string
                       required:
                         - name
+                        - replicas
                         - state
                       type: object
-                    taskManagerDeployment:
-                      properties:
-                        name:
-                          type: string
-                        state:
-                          type: string
-                      required:
-                        - name
-                        - state
-                      type: object
-                    taskManagerStatefulSet:
-                      properties:
-                        name:
-                          type: string
-                        state:
-                          type: string
-                      required:
-                        - name
-                        - state
-                      type: object
-                  required:
-                    - configMap
-                    - jobManagerService
-                    - jobManagerStatefulSet
                   type: object
                 control:
                   properties:
