Add new resource short name
```
kubectl get fcs -A
```

--- a/config/crd/bases/flinkoperator.k8s.io_flinkclusters.yaml
+++ b/config/crd/bases/flinkoperator.k8s.io_flinkclusters.yaml
@@ -13,6 +13,7 @@ spec:
     plural: flinkclusters
     shortNames:
       - fc
+      - fcs
     singular: flinkcluster
   scope: Namespaced
   versions:
