--- a/helm-chart/flink-operator/templates/flink-cluster-crd.yaml
+++ b/helm-chart/flink-operator/templates/flink-cluster-crd.yaml
@@ -24,6 +24,7 @@ spec:
     plural: flinkclusters
     shortNames:
       - fc
+      - fcs
     singular: flinkcluster
   scope: Namespaced
   versions:
@@ -37,6 +38,26 @@ spec:
         - jsonPath: .metadata.creationTimestamp
           name: age
           type: date
+        - jsonPath: .status.components.jobManager.ready
+          name: jm replicas
+          priority: 1
+          type: string
+        - jsonPath: .spec.jobManager.nodeSelector.topology\.kubernetes\.io\/zone
+          name: jm zone
+          priority: 1
+          type: string
+        - jsonPath: .status.components.taskManager.ready
+          name: tm replicas
+          priority: 1
+          type: string
+        - jsonPath: .spec.taskManager.nodeSelector.topology\.kubernetes\.io\/zone
+          name: tm zone
+          priority: 1
+          type: string
+        - jsonPath: .spec.image.name
+          name: Image
+          priority: 1
+          type: string
       name: v1beta1
       schema:
         openAPIV3Schema:
@@ -840,7 +861,6 @@ spec:
                         type: string
                       type: object
                     parallelism:
-                      default: 1
                       format: int32
                       type: integer
                     podAnnotations:
@@ -4125,6 +4145,42 @@ spec:
                   additionalProperties:
                     type: string
                   type: object
+                podDisruptionBudget:
+                  properties:
+                    maxUnavailable:
+                      anyOf:
+                        - type: integer
+                        - type: string
+                      x-kubernetes-int-or-string: true
+                    minAvailable:
+                      anyOf:
+                        - type: integer
+                        - type: string
+                      x-kubernetes-int-or-string: true
+                    selector:
+                      properties:
+                        matchExpressions:
+                          items:
+                            properties:
+                              key:
+                                type: string
+                              operator:
+                                type: string
+                              values:
+                                items:
+                                  type: string
+                                type: array
+                            required:
+                              - key
+                              - operator
+                            type: object
+                          type: array
+                        matchLabels:
+                          additionalProperties:
+                            type: string
+                          type: object
+                      type: object
+                  type: object
                 recreateOnUpdate:
                   default: true
                   type: boolean
@@ -6593,6 +6649,26 @@ spec:
                       required:
                         - state
                       type: object
+                    jobManager:
+                      properties:
+                        name:
+                          type: string
+                        ready:
+                          type: string
+                        readyReplicas:
+                          format: int32
+                          type: integer
+                        replicas:
+                          format: int32
+                          type: integer
+                        state:
+                          type: string
+                      required:
+                        - name
+                        - ready
+                        - replicas
+                        - state
+                      type: object
                     jobManagerIngress:
                       properties:
                         name:
@@ -6648,40 +6724,26 @@ spec:
                         - name
                         - state
                       type: object
-                    jobManagerStatefulSet:
+                    taskManager:
                       properties:
                         name:
                           type: string
+                        ready:
+                          type: string
+                        readyReplicas:
+                          format: int32
+                          type: integer
+                        replicas:
+                          format: int32
+                          type: integer
                         state:
                           type: string
                       required:
                         - name
+                        - ready
+                        - replicas
                         - state
                       type: object
-                    taskManagerDeployment:
-                      properties:
-                        name:
-                          type: string
-                        state:
-                          type: string
-                      required:
-                        - name
-                        - state
-                      type: object
-                    taskManagerStatefulSet:
-                      properties:
-                        name:
-                          type: string
-                        state:
-                          type: string
-                      required:
-                        - name
-                        - state
-                      type: object
-                  required:
-                    - configMap
-                    - jobManagerService
-                    - jobManagerStatefulSet
                   type: object
                 control:
                   properties:
