--- a/.github/workflows/release-helm-charts.yaml
+++ b/.github/workflows/release-helm-charts.yaml
@@ -1,9 +1,7 @@
 name: Release Charts
-
 on:
   push:
-    branches:
-      - master
+    tags: ["v*"]
 
 jobs:
   release:
@@ -23,10 +21,10 @@ jobs:
       - name: Set up Helm
         uses: azure/setup-helm@v1
         with:
-          version: v3.7.2
+          version: v3.10.0
 
       - name: Run chart-releaser
-        uses: helm/chart-releaser-action@v1.2.1
+        uses: helm/chart-releaser-action@v1
         with:
           charts_dir: helm-chart
         env:
