--- a/helm-chart/flink-operator/Chart.yaml
+++ b/helm-chart/flink-operator/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 name: flink-operator
 appVersion: "1.0"
 description: A Helm chart for flink on Kubernetes operator
-version: "0.2.4"
+version: "0.4.2-beta.5"
 keywords:
   - flink
 home: https://github.com/spotify/flink-on-k8s-operator
