Check if serviceaccount has configmap update permissions

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -209,3 +209,9 @@ rules:
       - create
       - update
       - delete
+  - apiGroups:
+      - ""
+    resources:
+      - serviceaccounts
+    verbs:
+      - impersonate
