fixup! Add HorizontalPodAutoscaler properties to FlinkCluster spec.

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -130,6 +130,22 @@ rules:
     verbs:
       - get
   - apiGroups:
+      - "autoscaling"
+    resources:
+      - horizontalpodautoscalers
+    verbs:
+      - create
+      - delete
+      - get
+      - list
+      - watch
+  - apiGroups:
+      - "autoscaling"
+    resources:
+      - horizontalpodautoscalers/status
+    verbs:
+      - get
+  - apiGroups:
       - ""
     resources:
       - pods
